fix(doc): fix api document auth required doc(group): update group create api document
