# app/endpoint/group.go
@@ -19,6 +19,7 @@ var Group = new(group)
 // @Tags         Group
 // @Accept       json
 // @Produce      json
+// @Param        body  body     model.GroupCreateReq  true  "Group info"
 // @Success      200  {object}  app.Response  "Response success"
 func (*group) Create(c echo.Context) (err error) {
     ctx, req := app.MemberContextAndBinding[model.GroupCreateReq](c)
