# assets/docs/swagger.json
@@ -21,6 +21,17 @@
                 ],
                 "summary": "Group Create",
                 "operationId": "GroupCreate",
+                "parameters": [
+                    {
+                        "description": "Group info",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.GroupCreateReq"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Response success",
@@ -137,6 +148,22 @@
                 "data": {},
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "model.GroupCreateReq": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "intro": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 2
                 }
             }
         },
